# cocoboom_server

./: Dockerfile  docker-compose.yaml  docker_entrypoint.sh  nginx.conf  pyproject.toml
.github/workflows/: deploy.yml
src/core/: models.py  settings.py
src/core/migrations/: 0001_initial.py
